Lots of unused parameter warnings in filesystem code https://bugs.webkit.org/show_bug.cgi?id=114747

Reviewed by Carlos Garcia Campos.

Comment out or remove unused parameter identifiers.

No functionalities changed, no new tests.

* Modules/filesystem/DOMFileSystem.cpp: Comment out |snapshot| because
it is referred in the comments inside the function.
(WebCore):
* Modules/filesystem/DOMFileSystemSync.cpp: Ditto.
(WebCore):
* Modules/filesystem/FileWriter.cpp: Remove unused |ec|.
(WebCore::FileWriter::abort):
* Modules/filesystem/FileWriterSync.cpp:
(WebCore::FileWriterSync::didWrite): Remove unused |bytes|.
* platform/AsyncFileSystemCallbacks.h:
(WebCore::AsyncFileSystemCallbacks::didOpenFileSystem): Comment out unused parameters
because the function is inlined.
(WebCore::AsyncFileSystemCallbacks::didCreateSnapshotFile): Ditto.
(WebCore::AsyncFileSystemCallbacks::didReadDirectoryEntry): Ditto.
(WebCore::AsyncFileSystemCallbacks::didReadDirectoryEntries): Ditto.
(WebCore::AsyncFileSystemCallbacks::didCreateFileWriter): Ditto.
* platform/blackberry/WorkerAsyncFileSystemBlackBerry.cpp:
(WebCore::WorkerAsyncFileSystemBlackBerry::createWriterOnMainThread): Remove unused |client|.


Canonical link: https://commits.webkit.org/133145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148621 268f45cc-cd09-0410-ab3c-d52691b4dbfc