Source/WebCore/Modules/filesystem/FileWriter.cpp
@@ -168,7 +168,7 @@ void FileWriter::truncate(long long position, ExceptionCode& ec)
     fireEvent(eventNames().writestartEvent);
 }
 
-void FileWriter::abort(ExceptionCode& ec)
+void FileWriter::abort(ExceptionCode&)
 {
     ASSERT(writer());
     if (m_readyState != WRITING)
